Talk about how awesome Treehouse studends are

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 This project is seriously awesome, you guys.
-This project will help me.
+This project will help me. This is just testing merging ad understanding it
